--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -39,6 +39,14 @@ body{
   justify-content: center;
   /* color: rgb(97, 94, 94) */
 }
+.titleBodega{
+  text-align: center;
+  text-decoration: underline;
+  font-style: italic;
+  font-family: 'Oswald', sans-serif;
+  font-size: 50px;
+
+}
 #name{
   text-decoration: none;
   color:black;
